tests/sksl/errors/EnumTypeCoercion.dsl.glsl
### Compilation failed:

error: cannot construct 'SkBlendMode'

1 error
